@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: chanio.test,v 1.3.2.2 2008/04/04 20:13:23 andreas_kupries Exp $
+# RCS: @(#) $Id: chanio.test,v 1.3.2.3 2008/04/06 00:52:09 kennykb Exp $
 
 if {[catch {package require tcltest 2}]} {
     chan puts stderr "Skipping tests in [info script].  tcltest 2 required."
@@ -6976,8 +6976,10 @@ test chan-io-53.9 {CopyData: -size and event interaction, Bug 780533} -setup {
 } -cleanup {
     chan close $pipe
     rename ::done {}
-    removeFile out
-    removeFile err
+    after 1000;			# Allow Windows time to figure out that the
+                                # process is gone
+    catch {removeFile out}
+    catch {removeFile err}
     catch {unset ::forever}
 } -result OK
 
