@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: io.test,v 1.80.2.2 2008/04/04 20:13:22 andreas_kupries Exp $
+# RCS: @(#) $Id: io.test,v 1.80.2.3 2008/04/06 00:52:10 kennykb Exp $
 
 if {[catch {package require tcltest 2}]} {
     puts stderr "Skipping tests in [info script].  tcltest 2 required."
@@ -6976,8 +6976,9 @@ test io-53.9 {CopyData: -size and event interaction, Bug 780533} -setup {
 } -cleanup {
     close $pipe
     rename ::done {}
-    removeFile out
-    removeFile err
+    after 1000;			# Give Windows time to kill the process
+    catch {removeFile out}
+    catch {removeFile err}
     catch {unset ::forever}
 } -result OK
 
